<?xml version="1.0"?>
<package format="2">
  <name>livox_ros_driver</name>
  <version>0.0.0</version>
  <description>The livox_ros_driver package</description>
  <maintainer email="robolab@todo.todo">robolab</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
